[gd_scene load_steps=8 format=3 uid="uid://km765w0j4vfi"]

[ext_resource type="Script" path="res://ui.gd" id="1_j4xlj"]
[ext_resource type="PackedScene" uid="uid://si6xejkupe8v" path="res://button.tscn" id="2_nvwg2"]
[ext_resource type="Script" path="res://button_restart.gd" id="3_t1dh0"]

[sub_resource type="Theme" id="Theme_tgwiy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t8h6t"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pq80x"]
bg_color = Color(0.45098, 0.658824, 0.482353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rucqp"]
bg_color = Color(0.701961, 0.52549, 0.396078, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_j4xlj")

[node name="LifeBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 53.0
grow_horizontal = 2
theme = SubResource("Theme_tgwiy")
theme_override_styles/background = SubResource("StyleBoxFlat_t8h6t")
theme_override_styles/fill = SubResource("StyleBoxFlat_pq80x")
value = 100.0
show_percentage = false

[node name="LifeText" type="Label" parent="LifeBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -20.0
offset_right = 100.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExpBar" type="ProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -53.0
offset_right = 400.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_tgwiy")
theme_override_styles/background = SubResource("StyleBoxFlat_t8h6t")
theme_override_styles/fill = SubResource("StyleBoxFlat_rucqp")
max_value = 5.0
show_percentage = false

[node name="ExpText" type="Label" parent="ExpBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -20.0
offset_right = 100.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "0/5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" parent="." instance=ExtResource("2_nvwg2")]
process_mode = 2
visible = false
offset_left = -69.0
offset_right = 69.0
text = "Restart"
script = ExtResource("3_t1dh0")
